# Cubbies

./: .gitignore  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.cpp
main/inc/: box_login.h  direction.h  download_master_json.h  download_mp3.h  http_client.h  main.h  metadata.h  sdcard.h  wifi.h  wifi_config.h
main/src/: box_login.cpp  direction.cpp  download_direction.cpp  download_master_json.cpp  download_mp3.cpp  http_client.cpp  main.cpp  metadata.cpp  sdcard.cpp  wifi.cpp
