idf_component_register(SRCS "./src/main.cpp"
                            "./src/wifi.cpp"
                            "./src/box_login.cpp"
                            "./src/download_master_json.cpp"
                            "./src/sdcard.cpp"
                    INCLUDE_DIRS "./inc")              